# un-ml-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: ml-pipeline.dockerfile
notebooks/: compare_models_summarizer.ipynb  ner.ipynb  spacy.ipynb  summarizer.ipynb  test_extraction.ipynb  text
unml/: README.md  api.py  main.py
unml/graphdb/: graphdb.py
unml/models/: README.md  model.py
unml/models/ner/: FLERT.py  README.md  RoBERTa.py  spaCy.py
unml/models/stt/: README.md
unml/models/summarize/: DistilBART.py  DistilBARTCNN.py  DistilBARTXSUM.py  DistilPegasusCNN.py  LED.py  LongT5.py  README.md
unml/modules/: ner.py  summarize.py
unml/utils/: api.py  args.py  consts.py  io.py  misc.py  network.py  text.py
unml/utils/consts/: api.py  countries.py  graphdb.py  io.py  logger.py  model.py  ner.py  summarize.py  un_bodies.py
unml/utils/types/: document.py  record.py
