[tool.poetry]
name = "un-ml-pipeline"
version = "0.1.0"
description = "Machine Learning pipeline for United Nations Digital Library"
authors = ["Clément Sicard <clement.sicard@icloud.com>"]
readme = "README.md"
packages = [{ include = "unml" }]

[tool.poetry.dependencies]
python = "^3.10"
transformers = { version = "^4.30.1", extras = ["torch", "onnx"] }
loguru = "^0.7.0"
pymupdf = "^1.22.3"
torch = "^2.0.1"
validators = "^0.20.0"
safetensors = "^0.3.1"
aiohttp = "^3.8.4"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"
isort = "^5.12.0"
pre-commit = "^3.3.2"
interrogate = "^1.5.0"
types-requests = "^2.31.0.1"
notebook = "^6.5.4"
ipywidgets = "^8.0.6"
mypy = "^1.4.0"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-module = true
fail-under = 100
verbose = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
