[tool.poetry]
name = "un-ml-pipeline"
version = "1.0.0"
description = "Machine Learning pipeline for United Nations Digital Library"
authors = ["Clément Sicard <clement.sicard@icloud.com>"]
readme = "README.md"
packages = [{ include = "unml" }]

[tool.poetry.dependencies]

python = ">=3.10,<3.12"
transformers = { version = "^4.30.1", extras = ["torch", "onnx"] }
loguru = "^0.7.0"
pymupdf = "^1.22.3"
torch = "^2.0.1"
validators = "^0.20.0"
safetensors = "0.3.1"
aiohttp = "^3.8.4"
tqdm = "^4.65.0"
sentencepiece = "^0.1.99"
# Flair
boto3 = "1.26.159"
botocore = "1.29.159"
bpemb = "0.3.4"
cloudpickle = "2.2.1"
contourpy = "1.1.0"
conllu = "4.5.3"
cycler = "0.11.0"
datasets = "2.13.1"
Deprecated = "1.2.14"
dill = "0.3.6"
flair = "0.12.2"
fonttools = "4.40.0"
ftfy = "6.1.1"
future = "0.18.3"
gdown = "4.4.0"
gensim = "4.3.1"
hyperopt = "0.2.7"
Janome = "0.4.2"
jmespath = "1.0.1"
joblib = "1.2.0"
kiwisolver = "1.4.4"
langdetect = "1.0.9"
lxml = "4.9.2"
matplotlib = "3.7.1"
more-itertools = "9.1.0"
mpld3 = "0.3"
multiprocess = "0.70.14"
pandas = "2.0.2"
Pillow = "9.5.0"
pptree = "3.1"
protobuf = "3.20.3"
py4j = "0.10.9.7"
pyarrow = "12.0.1"
pyparsing = "3.1.0"
PySocks = "1.7.1"
pytorch_revgrad = "0.2.0"
pytz = "2023.3"
s3transfer = "0.6.1"
scikit-learn = "1.2.2"
scipy = "1.10.1"
segtok = "1.5.11"
smart-open = "6.3.0"
sqlitedict = "2.1.0"
threadpoolctl = "3.1.0"
transformer-smaller-training-vocab = "0.2.4"
tzdata = "2023.3"
urllib3 = "1.26.16"
Wikipedia-API = "0.5.8"
wrapt = "1.15.0"
xxhash = "3.2.0"
# Spacy
spacy = "^3.5.3"
# API
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
pydantic = "^1.10.9"
undl = { git = "https://github.com/ClementSicard/un-digital-library-api.git", tag = "v1.0.3" }
neo4j = "^5.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"
isort = "^5.12.0"
pre-commit = "^3.3.2"
interrogate = "^1.5.0"
types-requests = "^2.31.0.1"
notebook = "^6.5.4"
ipywidgets = "^8.0.6"
mypy = "^1.4.0"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-module = true
fail-under = 100
verbose = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
